# culfw-ng

./: .FACTS.md.swp  .MEMORY.md.swp  .gitignore  CMakeLists.txt  COMMANDS.md  FACTS.md  MEMORY.md  README.md  boot_log.txt  boot_log_out.txt  build_idf.sh  components.txt  docker-compose.yml  esp_log.txt  full_log.txt  history.json  pairing_code_result.txt  partitions.csv  platformio.ini  platformio.ini.bak  project_config.json  sdkconfig  sdkconfig.cul32-c6  sdkconfig.defaults  sdkconfig.defaults.serial  sdkconfig.defaults.thread  sdkconfig.defaults.wifi  sdkconfig.security  secure_boot_signing_key.pem  start_otbr.sh  test_fs20.py  test_serial.py
data/: protocols.enc  protocols.json  protocols.json.bak
include/: cc1101.h  config_loader.h  culfw_duty_cycle.h  culfw_parser.h  generic_decoder.h  matter_bridge.h  matter_interface.h  matter_wrapper.h  rolling_code.h  slowrf.h  web_server.h  wifi_manager.h
log/: idf_py_stderr_output_105025  idf_py_stdout_output_105025
main/: CMakeLists.txt  cc1101.c  config_loader.c  culfw_parser.c  culfw_parser.h  generic_decoder.c  idf_component.yml  main.c  main.h  matter_bridge.c  matter_interface.c  matter_interface.cpp  slowrf.c  slowrf.h  thread_manager.c  thread_manager.h  web_server.c  wifi_manager.c
main/include/: CHIPProjectConfig.h
src/: cc1101.c  config_loader.c  culfw_duty_cycle.c  culfw_parser.c  generic_decoder.c  idf_component.yml  main.c  matter_bridge.c  matter_interface.c  rolling_code.c  slowrf.c  slowrf.h  web_server.c  wifi_manager.c
